[package]
name = "gm_maxmind_geoip"
authors = ["William Venner <william@venner.io>"]
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"

[dependencies]
gmod = { version = "11.1.1", default-features = false }
maxminddb = { version = "0.21.0", features = ["mmap"] }
memmap2 = "0.3.1"
thiserror = "1.0.30"